@@ -40,6 +40,7 @@
 #include "Transaction/Methods.h"
 #include "Transaction/SmartContext.h"
 #include "Transaction/StandaloneContext.h"
+#include "Utils/CollectionNameResolver.h"
 #include "Utils/ExecContext.h"
 #include "Utils/OperationOptions.h"
 #include "Utils/SingleCollectionTransaction.h"
@@ -783,8 +784,15 @@ OperationResult GraphOperations::removeEdgeOrVertex(const std::string& collectio
 
   trxCollections.emplace_back(collectionName);
 
+  CollectionNameResolver resolver {_vocbase};
   for (auto const& it : edgeCollections) {
     trxCollections.emplace_back(it);
+    auto col = resolver.getCollection(it);
+    if (col && col->isSmart() && col->type() == TRI_COL_TYPE_EDGE) {
+      for (auto const& rn : col->realNames()) {
+        trxCollections.emplace_back(rn);
+      }
+    }
   }
   for (auto const& it : possibleEdgeCollections) {
     trxCollections.emplace_back(it);  // add to trx collections
